[package]
name = "solar_time"
version = "0.1.1"
edition = "2021"
authors = ["incredimo <aghil@xo.rs>"]
license = "MIT"
description = "A library for calculating solar time as per vedic astorlogy principles"
repository = "https://github.com/incredimo/solar_time"
keywords = ["time", "solar", "vedic", "astrology"]

[dependencies]

